--- a/views/tables/basic_cell_text.tt
+++ b/views/tables/basic_cell_text.tt
@@ -4,6 +4,18 @@
   data_attr  = field_name ? ' data-' _ field_name _ '="' _ field_value _ '"' : '';
 %]
 <td [% cell_class %][% data_attr %]>
-  [% INCLUDE fields/sub/filter.tt value=label; %]
-  [% INCLUDE snippets/subfield.tt; %]
+  [%
+    INCLUDE fields/sub/filter.tt value=label;
+  
+    IF sub_field_type == "array";
+      sub_field_key = 0;
+      FOREACH current_sub_field IN sub_field;
+        current_sub_params = sub_params.$sub_field_key;
+        INCLUDE snippets/subfield.tt sub_field=current_sub_field sub_params=current_sub_params;
+        sub_field_key = sub_field_key + 1;
+      END;
+    ELSE;
+      INCLUDE snippets/subfield.tt;
+    END;
+  %]
 </td>
