--- a/views/tables/basic_row.tt
+++ b/views/tables/basic_row.tt
@@ -13,6 +13,7 @@
             label=field.label
             link=field.link
             filter=field.filter
+            sub_field_type=field.sub_field_type
             sub_field=field.sub_field
             sub_params=field.sub_params
             field_name=field.name
@@ -23,6 +24,7 @@
             label=field.label
             link=field.link
             filter=field.filter
+            sub_field_type=field.sub_field_type
             sub_field=field.sub_field
             sub_params=field.sub_params
             field_name=field.name
@@ -32,6 +34,7 @@
             class=field.class
             label=field.label
             filter=field.filter
+            sub_field_type=field.sub_field_type
             sub_field=field.sub_field
             sub_params=field.sub_params
             field_name=field.name
@@ -44,6 +47,7 @@
             class=field.class
             label=field.label
             filter=field.filter
+            sub_field_type=field.sub_field_type
             sub_field=field.sub_field
             sub_params=field.sub_params
             field_name=field.name
@@ -53,6 +57,7 @@
             class=field.class
             label=field.label
             filter=field.filter
+            sub_field_type=field.sub_field_type
             sub_field=field.sub_field
             sub_params=field.sub_params
             field_name=field.name
