Standardize active page detection for active classes Bug fixes

--- a/views/layouts/page_header_table.tt
+++ b/views/layouts/page_header_table.tt
@@ -1,3 +1,5 @@
+[% PROCESS navigation/active_pages.tt; %]
+
 <div class="content-block__head row">
   <div class="content-block__info col-lg-6">
     <h2 class="content-block__title">
@@ -12,27 +14,23 @@
   
   <div class="content-block__aside col-lg-6">
   [%
-    table_active_pages  = ["table_edit"];
-    topics_active_pages = ["topics", "topic_add", "topic_edit"];
-    fields_active_pages = ["layouts", "layout"];
-  
-    IF table_active_pages.grep(page).size OR topics_active_pages.grep(page).size OR fields_active_pages.grep(page).size;
+    IF manage_table_active_pages.grep(page).size OR manage_topics_active_pages.grep(page).size OR manage_fields_active_pages.grep(page).size;
       INCLUDE snippets/button_list.tt
         list_class = "list--horizontal list--no-borders list--buttons"
         buttons    = [{
           type   = "link",
           target = url.page _ "/table/" _ layout_obj.instance_id _ "/edit",
-          class  = "link link--plain" _ (table_active_pages.grep(page).size ? " link--active" : ""),
+          class  = "link link--plain" _ page_is_active(manage_table_active_pages, "link--active"),
           label  = "Table"
         }, {
           type   = "link",
           target = url.page _ "/" _ layout_obj.identifier _ "/topics/",
-          class  = "link link--plain" _ (topics_active_pages.grep(page).size ? " link--active" : ""),
+          class  = "link link--plain" _ page_is_active(manage_topics_active_pages, "link--active"),
           label  = "Topics"
         }, {
           type   = "link",
           target = url.page _ "/" _ layout_obj.identifier _ "/layout/",
-          class  = "link link--plain" _ (fields_active_pages.grep(page).size ? " link--active" : ""),
+          class  = "link link--plain" _ page_is_active(manage_fields_active_pages, "link--active"),
           label  = "Fields"
         }];
     ELSIF aside_buttons;
