--- a/views/snippets/header_table_detail.tt
+++ b/views/snippets/header_table_detail.tt
@@ -1,19 +1,5 @@
-[%
-  records_active_pages    = [
-    "data_table",
-    "data_graph",
-    "data_timeline",
-    "data_globe",
-    "data_calender",
-    "graphs",
-    "graph",
-    "metric",
-    "view",
-    "view/0",
-    "view/clone",
-  ];
-  edit_table_active_pages = ["table_edit", "topics", "topic_add", "topic_edit","layouts", "layout"];
-%]
+[% PROCESS navigation/active_pages.tt; %]
+
 <header class="table-header row no-gutters ">
   <div class="table-header-container">
     <div class="table-header-top row justify-content-between no-gutters">
@@ -25,20 +11,20 @@
         <div class="list list--horizontal">
           <ul class="list__items">
             <li class="list__item">
-              <a href='[% url.page %]/[% layout_obj.identifier %]/data' class='link link--plain [% IF records_active_pages.grep(page).size %]link--active[% END %]'>
+              <a href='[% url.page %]/[% layout_obj.identifier %]/data' class='link link--plain[% page_is_active(records_active_pages, "link--active"); %]'>
                 <span>Records</span>
               </a>
             </li>
             
             <li class="list__item">
-              <a href='[% url.page %]/[% layout_obj.identifier %]/' class='link link--plain [% IF page == "index" %]link--active[% END %]'>
+              <a href='[% url.page %]/[% layout_obj.identifier %]/' class='link link--plain[% page_is_active(table_dashboard_active_pages, "link--active"); %]'>
                 <span>Dashboard</span>
               </a>
             </li>
             
             [% IF user.permission.superadmin %]
             <li class="list__item">
-              <a href='[% url.page %]/table/[% layout_obj.instance_id %]/permissions' class='link link--plain [% IF page == "table_permissions" %]link--active[% END %]'>
+              <a href='[% url.page %]/table/[% layout_obj.instance_id %]/permissions' class='link link--plain[% page_is_active(table_permissions_active_pages, "link--active"); %]'>
                 <span>Permissions</span>
               </a>
             </li>
@@ -48,7 +34,7 @@
               IF user.permission.superadmin OR layout_obj.user_can("layout");
             %]
             <li class="list__item">
-              <a href='[% url.page %]/table/[% layout_obj.instance_id %]/edit' class="link link--plain [% IF edit_table_active_pages.grep(page).size %]link--active[% END %]">
+              <a href='[% url.page %]/table/[% layout_obj.instance_id %]/edit' class='link link--plain[% page_is_active(edit_table_active_pages, "link--active"); %]'>
                 <span>Edit table</span>
               </a>
             </li>
@@ -72,9 +58,7 @@
   
       <div class="table-header__options-right">
         [%
-          IF page == "view" OR page.substr(0, 5) == "view/";
-        
-          ELSIF page.substr(0, 5) == "data_";
+          IF page.substr(0, 5) == "data_";
             view_groups = [];
           
             IF user_views.personal.size;
@@ -138,6 +122,7 @@
             INCLUDE snippets/dropdown.tt
               id             = "views"
               custom_classes = "dropdown--small"
+              menu_right     = 1
               label          = "Current view: " _  (v ? v.name : "All data")
               filter         = "html"
               groups         = view_groups;
@@ -196,6 +181,7 @@
             INCLUDE snippets/dropdown.tt
               id             = "manage_views"
               custom_classes = "dropdown--small"
+              menu_right     = 1
               label          = "Manage views"
               filter         = "html"
               groups         = manage_view_groups;
@@ -214,6 +200,7 @@
               INCLUDE snippets/dropdown.tt
                 id             = "view_limits"
                 custom_classes = "dropdown--small"
+                menu_right     = 1
                 label          = current_view_limit_extra.name
                 filter         = "html"
                 groups         = view_limit_groups;
@@ -223,6 +210,7 @@
               INCLUDE snippets/dropdown.tt
                 id             = "manage_graphs"
                 custom_classes = "dropdown--small"
+                menu_right     = 1
                 label          = "Manage graphs"
                 filter         = "html"
                 groups         = [{
@@ -236,7 +224,7 @@
                 }];
             END;
           
-            IF (layout_obj.user_can("link") AND show_link) OR layout_obj.user_can("bulk_update") OR layout_obj.user_can("delete") OR layout_obj.user_can("download") OR layout_obj.user_can("bulk_delete");
+            IF (layout_obj.user_can("link") AND show_link) OR layout_obj.user_can("layout") OR layout_obj.user_can("bulk_update") OR layout_obj.user_can("delete") OR layout_obj.user_can("download") OR layout_obj.user_can("bulk_delete");
               bulk_action_groups = [{ items = [] }];
               
               IF layout_obj.user_can("link") AND show_link;
@@ -302,6 +290,7 @@
                 INCLUDE snippets/dropdown.tt
                   id             = "bulk_actions"
                   custom_classes = "dropdown--small"
+                  menu_right     = 1
                   label          = "Actions"
                   filter         = "html"
                   groups         = bulk_action_groups;
