Add records table state save

--- a/views/data_table.tt
+++ b/views/data_table.tt
@@ -16,6 +16,7 @@
       table_language     = '{"emptyTable": "There is no records available","lengthMenu":"Rows per page _MENU_","paginate":{"next":"Next page","previous":"Previous page"},"search":"","searchPlaceholder":"Search in this table"}';
       table_page_length  = 50;
       table_length_menu  = 'basic';
+      table_save_state   = 1;
       table_unresponsive = 0;
       table_columns      = [];
       rows               = [];
