--- a/views/tables/basic_table.tt
+++ b/views/tables/basic_table.tt
@@ -132,7 +132,7 @@
   END;
   
   table_config = '{
-    "dom": "' _ ( table_dom || '' ) _ '",_AJAX
+    "dom": "' _ ( table_dom || '' ) _ '",_AJAX_STATE_SAVE
     "order":[' _ ( table_order || '[0,"asc"]' ) _ '],
     "language": ' _ ( table_language || '{"emptyTable": "There is no data available in this table"}' ) _ ',
     "responsive": ' _ ( table_unresponsive ? 'false' : '{"details":{"type":"column","target":-1}}' ) _ ',
@@ -146,6 +146,7 @@
   }';
 
   table_config = table_config.replace('_AJAX', table_ajax ? "\n" _ '    "ajax":"' _ table_ajax _ '",' _ "\n" _ '    "serverSide":true,' _ "\n" _ '    "processing":true,' : '');
+  table_config = table_config.replace('_STATE_SAVE', table_save_state ? "\n" _ '    "stateSave": true,' : '');
   table_config = table_config.replace('_SHOW_ALL_RECORDS', table_show_all_records ? "\n" _ '    "iDisplayLength":-1,' : '');
   table_config = table_config.replace('_ROW_REORDER', reorderConfig);
   table_config = table_config.replace('_PAGE_LENGTH', pageLengthConfig);
