--- a/views/layouts/page_header_table.tt
+++ b/views/layouts/page_header_table.tt
@@ -3,7 +3,10 @@
 <div class="content-block__head row">
   <div class="content-block__info col-lg-6">
     <h2 class="content-block__title">
-      [% title || 'Edit table' %]
+      [%
+        page_header = title || 'Edit table';
+        INCLUDE fields/sub/filter.tt value = page_header;
+      %]
     </h2>
     [% IF description %]
     <div class="content-block__intro">
